# French-PGO-Auctions-Dashboard

./: .env.docker.example  .gitattributes  .gitignore  .gitignore.txt  AGENTS.md  CLAUDE.md  Makefile  README.md  blackboard.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: dumb-user-tester.md  software-architect.md  web-app-designer.md
.claude/rules/: project-structure.md
.rovodev/subagents/: mr-visionary.md  the-architect.md
.specify/memory/: constitution.md
docker/nginx/: nginx.conf  nginx.dev.conf
specs/001-auction-event-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docker-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_schema.py  002_add_auction_event.py  003_add_auction_event_details.py
src/backend/app/: config.py  database.py  main.py
src/backend/app/api/: auction_events.py  auctions.py  router.py  stats.py
src/backend/app/middleware/: __init__.py  security.py
src/backend/app/models/: __init__.py  auction.py  auction_event.py  sync_log.py
src/backend/app/schemas/: __init__.py  auction.py  auction_event.py
src/backend/app/services/: __main__.py  parser.py  sync.py
src/backend/tests/: conftest.py
src/backend/tests/unit/: test_api_validation.py  test_auction_event_api.py  test_auction_event_sync.py  test_stats.py  test_sync_dedup.py
(+39 files in other folders)
